ADDED: header element

--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -8,7 +8,14 @@
   <title>Address Book Form</title>
 </head>
 <body>
-    
-    
+    <header class="header-content header">
+        <div class="logo-content">
+          <img src="../assests/contact_logo.png" alt="address-book-logo" />
+          <div>
+            <span class="address-text">ADDRESS</span><br />
+            <span class="address-text address-book">BOOK</span>
+          </div>
+        </div>
+      </header>
 </body>
 </html>
