--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../css/address_book_form.css" />
-  <title>Address Book Form</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../css/address_book_form.css" />
+    <title>Address Book Form</title>
 </head>
+
 <body>
     <header class="header-content header">
         <div class="logo-content">
-          <img src="../assests/contact_logo.png" alt="address-book-logo" />
-          <div>
-            <span class="address-text">ADDRESS</span><br />
-            <span class="address-text address-book">BOOK</span>
-          </div>
+            <img src="../assets/contact_logo.png" alt="address-book-logo" />
+            <div>
+                <span class="address-text">ADDRESS</span><br />
+                <span class="address-text address-book">BOOK</span>
+            </div>
         </div>
-      </header>
+    </header>
+
+    <div class="form-content">
+        <form class="form" action="#">
+            <div class="form-head">
+                <h1 class="form-head-title">Person Address Form</h1>
+            </div>
+        </form>
+    </div>
 </body>
+
 </html>
