ADDED: image to cancel form

--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -24,6 +24,7 @@
         <form class="form" action="#">
             <div class="form-head">
                 <h1 class="form-head-title">Person Address Form</h1>
+                <a href="../pages/home.html" class="close-button"><img src="../assets/cross.png" /></a>
             </div>
         </form>
     </div>
