ADDED: full name field to form

--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -26,6 +26,11 @@
                 <h1 class="form-head-title">Person Address Form</h1>
                 <a href="../pages/home.html" class="close-button"><img src="../assets/cross.png" /></a>
             </div>
+            <div class="row-content">
+                <label class="label text" for="name">Full Name</label>
+                <input class="input" type="text" id="name" name="name" autocomplete="disable" required />
+                <error-output id="name-error" class="text-error" for="text"></error-output>
+            </div>
         </form>
     </div>
 </body>
