--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -31,6 +31,11 @@
                 <input class="input" type="text" id="name" name="name" autocomplete="disable" required />
                 <error-output id="name-error" class="text-error" for="text"></error-output>
             </div>
+            <div class="row-content">
+                <label class="label text" for="phoneNumber">Phone Number</label>
+                <input class="input" type="tel" id="phoneNumber" name="phoneNumber" autocomplete="disable" required />
+                <error-output id="phoneNumber-error" class="tel-error" for="tel"></error-output>
+            </div>
         </form>
     </div>
 </body>
