--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -36,6 +36,13 @@
                 <input class="input" type="tel" id="phoneNumber" name="phoneNumber" autocomplete="disable" required />
                 <error-output id="phoneNumber-error" class="tel-error" for="tel"></error-output>
             </div>
+            <div class="row-content">
+                <div class="text-row">
+                    <label class="label text" for="address">Address</label>
+                    <textarea id="address" class="input" name="address" placeholder="" style="height: 100px"
+                        autocomplete="disable"></textarea>
+                </div>
+            </div>
         </form>
     </div>
 </body>
