ADDED: city select field to form

--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -43,6 +43,17 @@
                         autocomplete="disable"></textarea>
                 </div>
             </div>
+            <div class="row-content location-row">
+                <div>
+                    <label class="label text" for="city">City</label>
+                    <select id="city" name="City">
+                        <option value="0">Select State</option>
+                        <option value="Bangalore">Bangalore</option>
+                        <option value="Chennai">Mumbai</option>
+                        <option value="Hyderabad">Cochin</option>
+                    </select>
+                </div>
+            </div>
         </form>
     </div>
 </body>
