ADDED: state select field to form

--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -47,12 +47,21 @@
                 <div>
                     <label class="label text" for="city">City</label>
                     <select id="city" name="City">
-                        <option value="0">Select State</option>
+                        <option value="" hidden>Select City</option>
                         <option value="Bangalore">Bangalore</option>
                         <option value="Chennai">Mumbai</option>
                         <option value="Hyderabad">Cochin</option>
                     </select>
                 </div>
+                <div>
+                    <label class="label text" for="state">State</label>
+                    <select id="state" name="State">
+                        <option value="" hidden>Select State</option>
+                      <option value="Karnataka">Karnataka</option>
+                      <option value="Telengana">Maharastra</option>
+                      <option value="Tamil Nadu">Kerala</option>
+                    </select>
+                  </div>
             </div>
         </form>
     </div>
