--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -41,6 +41,7 @@
                     <label class="label text" for="address">Address</label>
                     <textarea id="address" class="input" name="address" placeholder="" style="height: 100px"
                         autocomplete="disable"></textarea>
+                <error-output id="address-error" class="add-error" for="address"></error-output>
                 </div>
             </div>
             <div class="row-content location-row">
@@ -70,6 +71,9 @@
             </div>
         </form>
     </div>
+    <script src="../js/utility.js"></script>
+    <script src="../js/address_book_data.js"></script>
+    <script src="../js/address_book_form.js"></script>
 </body>
 
 </html>
