--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -69,8 +69,17 @@
                     <error-output id="zip-error" class="zip-error" for="zip"></error-output>
                 </div>
             </div>
+            <div class="buttonParent">
+                <div class="submit-reset">
+                <button type="submit" class="button submitButton" id="submitButton" onclick="save()" disabled>
+                  Add
+                </button>
+                <button type="reset" class="resetButton button">Reset</button>
+                </div>
+              </div>
         </form>
     </div>
+    
     <script src="../js/utility.js"></script>
     <script src="../js/address_book_data.js"></script>
     <script src="../js/address_book_form.js"></script>
