ADDED: refernce to utility js file

--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -71,15 +71,14 @@
             </div>
             <div class="buttonParent">
                 <div class="submit-reset">
-                <button type="submit" class="button submitButton" id="submitButton" onclick="save()" disabled>
+                <button type="submit" class="button submitButton" id="submitButton" onclick="save()" >
                   Add
                 </button>
-                <button type="reset" class="resetButton button">Reset</button>
+                <button type="reset" class="resetButton button" onclick="reset()">Reset</button>
                 </div>
               </div>
         </form>
     </div>
-    
     <script src="../js/utility.js"></script>
     <script src="../js/address_book_data.js"></script>
     <script src="../js/address_book_form.js"></script>
