--- a/pages/address_book_home.html
+++ b/pages/address_book_home.html
@@ -22,6 +22,16 @@
             </div>
         </div>
     </header>
+    <div class="main-content">
+        <div class="header-content">
+            <div class="address-detail-text">
+                Person Details
+                <div class="address-count">10</div>
+            </div>
+            <a href="../pages/address_book_form.html" class="add-button">
+                <img src="../assets/add_person.png" alt="" /></a>
+        </div>
+    </div>
 </body>
 
 </html>
