ADDED: table with sample values

--- a/pages/address_book_home.html
+++ b/pages/address_book_home.html
@@ -31,6 +31,9 @@
             <a href="../pages/address_book_form.html" class="add-button">
                 <img src="../assets/add_person.png" alt="" /></a>
         </div>
+        <div class="table-main">
+            <table id="table-display" class="table"></table>
+        </div>
     </div>
 </body>
 
