ADDED: refernce to address book home js

--- a/pages/address_book_home.html
+++ b/pages/address_book_home.html
@@ -35,6 +35,8 @@
             <table id="table-display" class="table"></table>
         </div>
     </div>
+    <script src="../js/site_properties.js"></script>
+    <script src="../js/address_book_home.js"></script>
 </body>
 
 </html>
