--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -24,7 +24,7 @@
         <form class="form" action="#">
             <div class="form-head">
                 <h1 class="form-head-title">Person Address Form</h1>
-                <a href="../pages/home.html" class="close-button"><img src="../assets/cross.png" /></a>
+                <a href="../pages/address_book_home.html" class="close-button"><img src="../assets/cross.png" /></a>
             </div>
             <div class="row-content">
                 <label class="label text" for="name">Full Name</label>
