ADDED; refernce to http services js file

--- a/pages/address_book_home.html
+++ b/pages/address_book_home.html
@@ -36,6 +36,7 @@
         </div>
     </div>
     <script src="../js/site_properties.js"></script>
+    <script src="../js/http_services.js"></script>
     <script src="../js/address_book_home.js"></script>
 </body>
 
