ADDED: refernce to http services js file

--- a/pages/address_book_form.html
+++ b/pages/address_book_form.html
@@ -81,6 +81,7 @@
         </form>
     </div>
     <script src="../js/utility.js"></script>
+    <script src="../js/http_services.js"></script>
     <script src="../js/site_properties.js"></script>
     <script src="../js/address_book_form.js"></script>
 </body>
